<resources>
    <string name="app_name">101Pipas</string>
    <string name="login_correo">Correo</string>
    <string name="login_contrasenia_incorrecta">La contraseña introducido es incorrecta</string>
    <string name="login_correo_incorrecto">El correo introducido es incorrecto</string>
    <string name="login_contrasenia_vacia">La contraseña no puede estar vacía</string>
    <string name="login_correo_vacio">El correo no puede estar vacío</string>
    <string name="login_contrasenia">Contraseña</string>
    <string name="login_hint_contrasenia">Introduce la contraseña</string>
    <string name="login_inicia_sesion">Iniciar Sesión</string>
    <string name="login_contrasenia_olvidada">¿Has olvidado tu contraseña?</string>
    <string name="login_textview_registro">¿No tienes cuenta?\nRegistrate</string>
    <string name="login_hint_correo">Introduce el correo</string>
    <string name="login_mas_opciones">MÁS OPCIONES</string>
    <string name="default_web_client_id">993751655241-qoc81f9t9islii7oaedhjmb8ukus8t15.apps.googleusercontent.com</string>
    <string name="login_btn_google">INICIAR SESIÓN CON GOOGLE</string>
    <string name="login_btn_registro">Regístrate</string>
    <string name="ranking_barra_usuario">Usuario</string>
    <string name="ranking_barra_completadas">Completadas</string>
    <string name="ranking_titulo">Ranking Mundial</string>
    <string name="login_google_fallido">No se ha podido completar el inicio de sesión</string>
    <string name="recuperar_contrasenia_cuenta_no_encontrada">Cuenta no encontrada</string>
    <string name="recuperar_contrasenia_enviar_correo">Enviar\ncorreo</string>
    <string name="recuperar_contrasenia_introduce_correo">Introduce el correo asociado a tu cuenta :</string>
    <string name="recuperar_contrasenia_correo">Correo</string>
    <string name="recuperar_contrasenia_introduce_tu_correo">Introduce tu correo</string>
    <string name="registro_titulo_registrate">REGÍSTRATE</string>
    <string name="registro_nombre_de_usuario">Nombre de usuario</string>
    <string name="registro_escribe_nombre_usuario">Escribe tu nombre de usuario</string>
    <string name="registro_correo">Correo</string>
    <string name="registro_escribe_tu_correo">Escribe tu correo</string>
    <string name="registro_contrasenia">Contraseña</string>
    <string name="registro_escribe_tu_contrasenia">Escribe tu contraseña</string>
    <string name="registro_repite_contrasenia">Repite la contraseña</string>
    <string name="registro_contrasenias_no_coinciden">Las contraseñas no coinciden</string>
    <string name="registro_registrate">Regístrate</string>
    <string name="registro_ya_tienes_cuenta">¿Ya tienes cuenta?\nInicia sesión</string>
    <string name="perfil_nick">nick</string>
    <string name="perfil_nombre">nombre</string>
    <string name="tarjeta_descubrir_ubicacion">Ubicación</string>
    <string name="tarjeta_descubrir_titulo_desafio">Título del desafío</string>
    <string name="tarjeta_inicio_lista_de_etiquetas">Lista de etiquetas</string>
    <string name="tarjeta_inicio_titulo_desafio">Título del desafío</string>
    <string name="tarjeta_inicio_ejemplo_descripcion">Descripción del desafío Descripción del desafío Descripción del desafío Descripción del desafío</string>
    <string name="tarjeta_inicio_ubicacion">Ubicación</string>
    <string name="list_experiencias_titulo_ejemplo">10. Croqueta de calamar</string>
    <string name="list_experiencias_emoji_check">✔️</string>
    <string name="list_experiencias_descripcion_ejemplo">Descripción de una experiencia muy experienciosa con jamones acuáticos de textura parecida a la goma rebozados.</string>
    <string name="list_experiencias_pagina_web">Página web</string>
    <string name="list_experiencias_ver_en_mapa">Ver en el mapa</string>
    <string name="listado_experiencias_titulo_ejemplo">101 croquetas</string>
    <string name="listado_experiencias_progreso" formatted="true">Progreso: %1$d / %2$d experiencias completadas</string>
    <string name="inicio_desafios">Desafíos</string>
    <string name="inicio_buscar">Buscar</string>
    <string name="inicio_simbolo_mas">+</string>
    <string name="inicio_mensaje_no_desafios">¡Ve a \'Descubrir\' \npara empezar un desafío!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recuperar_contrasenia_cuenta_no_encontrada_2">Cuenta no encontrada en la base de datos.</string>
    <string name="recuperar_contrasenia_error_base_de_datos">Error en la base de datos</string>
    <string name="recuperar_contrasenia_correo_recuperacion_enviado">Correo de recuperación enviado</string>
    <string name="recuperar_contrasenia_correo_no_registrado_auth">Este correo no está registrado en Firebase Auth.</string>
    <string name="recuperar_contrasenia_error_enviar_correo">Error al enviar el correo.</string>
    <string name="recuperar_contrasenia_correo_vacio">El correo no puede estar vacío</string>
    <string name="registro_rellena_todos_los_campos">Por favor, rellena todos los campos</string>
    <string name="registro_contrasenias_no_coinciden_2">Las contraseñas no coinciden</string>
    <string name="registro_contrasenia_6_caracteres">La contraseña debe tener al menos 6 caracteres</string>
    <string name="registro_error_registro">"Error al registrar usuario: "</string>
    <string name="registro_usuario_registrado">Usuario registrado con éxito</string>
    <string name="registro_guardar_usuario_db_error">Error al guardar el usuario en la base de datos</string>
    <string name="descubrir_fragmentos_desafio_no_existe">El desafio no existe</string>
    <string name="descubrir_fragment_error_consulta">"Error en la consulta: "</string>
    <string name="inicio_fragment_no_desafios_iniciados">No tienes desafíos iniciados</string>
    <string name="inicio_fragment_error_consulta">"Error en la consulta: "</string>
    <string name="inicio_fragment_log_desafio_1">" tiene está en el desafío con ID "</string>
    <string name="inicio_fragment_log_desafio_2">, cuyo nombre es \'</string>
    <string name="inicio_fragment_coma">\'</string>
    <string name="experiencias_listadas_exp_completada">✔️ Completada</string>
    <string name="listado_experiencias_tvProgress_1">"Progreso: "</string>
    <string name="listado_experiencias_tvProgress_2">" experiencias completadas"</string>
    <string name="listado_experiencias_log_1">"Nombre del desafío : "</string>
    <string name="listado_experiencias_error_consulta">"Error en la consulta: "</string>
    <string name="geolocalizacion_ubicacion_no_disponible">Ubicación no disponible</string>
    <string name="geolocalizacion_ubicacion_actual_inobtenible">No se pudo obtener la ubicación actual</string>
    <string name="geolocalizacion_recomendacion_permisos_ubicacion">Se recomienda conceder permisos de ubicación</string>
    <string name="geolocalizacion_error_leer_exp">Error al leer experiencias bbdd:\n</string>
    <string name="geolocalizacion_ruta_inobtenible">No se pudo obtener la ruta</string>
    <string name="geolocalizacion_error_ruta_cercana">Error conseguir ruta más cercana con GoogleMaps</string>
    <string name="social_texto">APARTADO SOCIAL</string>
    <string name="descubrir_fragment_titulo">Descubrir</string>
    <string name="ajustes_cerrar_sesion">Cerrar Sesión</string>
    <string name="error_al_leer_el_grupo">"Error al leer el grupo: "</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="btnVerTodosGrupos">Ver todos los grupos</string>
    <string name="InfoGrupo">Información del grupo:</string>
    <string name="fechaCreacion">Oct. 5 2024\nFecha de creación</string>
    <string name="Aventureros">4\nAventureros</string>
    <string name="txtCroquetas">101 Croquetas</string>
    <string name="edBuscar">Buscar</string>
    <string name="ListaGruposVolver">Volver</string>
    <string name="ListaGruposGrupos">Grupos</string>
    <string name="ListaGruposBuscar">Buscar</string>
    <string name="SocialPrincipalBuscar">Buscar</string>
    <string name="SocialPrincipalAmigos">Amigos:</string>
    <string name="SocialPrincipalGrupos">Grupos:</string>
    <string name="FragmentAmigosAmigos">Amigos:</string>
    <string name="FragmentAmigosVerTodosAmigos">Ver todos los amigos</string>
    <string name="ItemGrupoNombreGrupo">Nombre del Grupo</string>
    <string name="ItemSocialNombre">Nombre</string>
    <string name="crear_nuevo_grupo">Crear nuevo grupo</string>
    <string name="elige_un_desafio">Elige un desafío :</string>
    <string name="nombre_del_grupo">Nombre del grupo :</string>
    <string name="grupo_privado">Grupo privado :</string>
    <string name="aniadir_amigo">Añadir amigo</string>
    <string name="texto_btn_crear_grupo">Crear grupo</string>
    <string name="crear_desafio">Crear desafío</string>
    <string name="ir_a_experiencias">Ir a experiencias</string>
    <string name="nombre_del_desafio">Nombre del desafío :</string>
    <string name="ciudad_crear_desafio">Ciudad :</string>
    <string name="descripcion_crear_desafio">Descripción :</string>
    <string name="etiquetas_crear_desafio">Etiquetas :</string>
    <string name="cultura_crear_desafio">Cultura</string>
    <string name="arte_crear_desafio">Arte</string>
    <string name="masDieciocho_crear_desafio">+18</string>
    <string name="gastronomia_crear_desafio">Gastronomía</string>
    <string name="naturaleza_crear_desafio">Naturaleza</string>
    <string name="simboloMas_inicio">+</string>
    <string name="titulo_crear_experiencia">Título de la experiencia :</string>
    <string name="descripcion_crear_experiencia">Descripción de la experiencia :</string>
    <string name="subir_foto_crear_experiencia">Subir foto</string>
    <string name="insertar_experiencias">Insertar experiencias</string>
    <string name="contrasenia_crear_grupo">Contraseña :</string>
    <string name="buscar_descubrir">Buscar</string>
    <string name="madrid_descubrir">Madrid</string>
    <string name="gastronomia_desafios">Gastronomía</string>
    <string name="cultura_descubrir">Cultura</string>
    <string name="no_hay_desafios_comenzados_perfil">Todavía no hay desafíos comenzados</string>
    <string name="no_has_terminado_desafio_perfil">Aún no has terminado ningún desafío</string>
    <string name="crear_experiencias_rellena_todos_los_campos">Rellena los campos antes de añadir otra experiencia</string>
    <string name="crear_experiencias_debe_incluir_una_exp">Debe incluir al menos una experiencia</string>
    <string name="crear_experiencias_no_se_van_a_guardar_exp">No se van a guardar las experiencias. ¿Deseas volver a la pantalla anterior?</string>
    <string name="crear_experiencias_si">Si</string>
    <string name="crear_experiencias_no">No</string>
    <string name="crear_experiencias_desafio_creado">Desafío creado</string>
    <string name="crear_experiencias_error_al_crear_desafio">Error al crear el desafío</string>
    <string name="grupo_fragment_mensaje_invitacion_1">🔹 ¿Te apuntas al desafío? 🔹</string>
    <string name="grupo_fragment_mensaje_invitacion_2">🔥¡Únete al grupo \'</string>
    <string name="grupo_fragment_mensaje_invitacion_3">\' y demuestra lo que vales!🔥</string>
    <string name="grupo_fragment_mensaje_invitacion_4">\🔑Para entrar usa esta contraseña : </string>
    <string name="grupo_fragment_mensaje_invitacion_5">¡Contamos contigo!</string>
    <string name="login_registrate"><u>Registrate</u></string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="rellenar_contrasenia_titulo">Introduce la contraseña del grupo</string>
    <string name="rellenar_contrasenia_edit_text">Introduce la contaseña</string>
    <string name="rellenar_contrasenia_entrar">Unirse</string>
</resources>