<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding"
    android:background="@drawable/background"
    tools:context=".autenticacion.Login">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnGoogleSignIn"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btnGoogleSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/separacion_grande_treinta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"/>

<!--    <Button-->
<!--        android:id="@+id/btnRegistro"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="5dp"-->
<!--        android:layout_marginHorizontal="20dp"-->
<!--        android:backgroundTint="@color/color_principal"-->
<!--        android:textSize="20sp"-->
<!--        android:textStyle="bold"-->
<!--        android:text="@string/login_btn_registro"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/btnGoogleSignIn"/>-->

    <View
        android:id="@+id/vIzqMasOpcionesLogin"
        android:layout_width="0dp"
        android:layout_height="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvMasOpciones"
        app:layout_constraintTop_toTopOf="@id/tvMasOpciones"
        app:layout_constraintBottom_toBottomOf="@id/tvMasOpciones"
        android:layout_marginEnd="@dimen/separacion_mediana_quince"
        android:background="@color/texto_desapercibido"/>

    <View
        android:id="@+id/vDerMasOpcionesLogin"
        android:layout_width="0dp"
        android:layout_height="2dp"
        app:layout_constraintStart_toEndOf="@id/tvMasOpciones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvMasOpciones"
        app:layout_constraintBottom_toBottomOf="@id/tvMasOpciones"
        android:layout_marginStart="@dimen/separacion_mediana_quince"
        android:background="@color/texto_desapercibido"/>

    <TextView
        android:id="@+id/tvMasOpciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/separacion_mediana_quince"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/login_mas_opciones"
        android:textAlignment="center"
        android:textColor="@color/texto_desapercibido"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGoogleSignIn" />

    <TextView
        android:id="@+id/tvLoginCorreo"
        android:layout_width="67dp"
        android:layout_height="34dp"
        android:layout_marginTop="@dimen/separacion_mediana_quince"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/login_correo"
        android:textColor="@color/color_principal"
        android:textSize="@dimen/tam_subtitulo"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMasOpciones" />

    <EditText
        android:id="@+id/etCorreo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/tam_texto"
        android:textColor="@color/black"
        android:textColorHint="@color/texto_secundario"
        android:padding="@dimen/padding_pequenio_diez"
        android:hint="@string/login_hint_correo"
        android:background="@drawable/borde_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginCorreo"/>

    <TextView
        android:id="@+id/tvLoginCorreoError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/login_correo_incorrecto"
        android:textSize="@dimen/tam_texto_pequenio"
        android:textColor="@color/rojo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etCorreo"/>

    <TextView
        android:id="@+id/tvLoginContrasenia"
        android:layout_width="118dp"
        android:layout_height="36dp"
        android:layout_marginTop="@dimen/separacion_pequenia_cinco"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/login_contrasenia"
        android:textColor="@color/color_principal"
        android:textSize="@dimen/tam_subtitulo"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLoginCorreoError" />

    <EditText
        android:id="@+id/etContrasenia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/tam_texto"
        android:textColor="@color/black"
        android:textColorHint="@color/texto_secundario"
        android:padding="@dimen/padding_pequenio_diez"
        android:inputType="textPassword"
        android:hint="@string/login_hint_contrasenia"
        android:background="@drawable/borde_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginContrasenia"/>

    <TextView
        android:id="@+id/tvLoginContraseniaError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/login_contrasenia_incorrecta"
        android:textSize="@dimen/tam_texto_pequenio"
        android:textColor="@color/rojo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etContrasenia"/>

    <Button
        android:id="@+id/btnInicioSesion"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/separacion_mediana_quince"
        android:background="@drawable/rounded_corner_button"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/login_inicia_sesion"
        android:textColor="@color/white"
        android:textSize="@dimen/tam_texto"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvContraseniaOlvidada"
        tools:layout_editor_absoluteX="30dp" />

    <TextView
        android:id="@+id/tvContraseniaOlvidada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/separacion_mediana_quince"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/login_contrasenia_olvidada"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/tam_texto_pequenio"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLoginContraseniaError" />

    <TextView
        android:id="@+id/tvNoTienesCuentaLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/akaya_telivigala"
        android:text="¿No tienes cuenta?"
        android:textColor="@color/black"
        android:textSize="@dimen/tam_texto_pequenio"
        app:layout_constraintBottom_toTopOf="@id/tvRegistrateLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvRegistrateLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/login_registrate"
        android:textColor="@color/color_principal"
        android:textSize="@dimen/tam_texto_pequenio"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>