<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".social.RellenarContraseniaFragment">

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/separacion_mediana_quince"
        android:fontFamily="@font/akaya_telivigala"
        android:textAlignment="center"
        android:text="@string/rellenar_contrasenia_titulo"
        android:textColor="@color/color_principal"
        android:textSize="@dimen/tam_subtitulo"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/tam_texto"
        android:textColor="@color/black"
        android:inputType="textPassword"
        android:textColorHint="@color/texto_secundario"
        android:padding="@dimen/padding_pequenio_diez"
        android:hint="@string/rellenar_contrasenia_edit_text"
        android:background="@drawable/borde_edit_text"
        android:fontFamily="@font/akaya_telivigala"
        app:layout_constraintTop_toBottomOf="@+id/tvUsername"/>

    <Button
        android:id="@+id/btnGuardarCambios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner_button"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/rellenar_contrasenia_entrar"
        android:textColor="@color/white"
        android:textSize="@dimen/tam_texto"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/etUsername"/>

</androidx.constraintlayout.widget.ConstraintLayout>